Bugzilla bug 81011: Changed the return type of _PR_MD_TEST_AND_LOCK from PRBool to PRIntn and documented its meaning. Modifies files: _beos.h, _irix.h, _win16.h, _win95.h, primpl.h, os2cv.c.