nsprpub/pr/include/md/_beos.h
@@ -481,7 +481,7 @@ NSPR_API(void) _MD_init_locks(void);
 NSPR_API(PRStatus) _MD_new_lock(struct _MDLock *md);
 NSPR_API(void) _MD_free_lock(struct _MDLock *md);
 NSPR_API(void) _MD_lock(struct _MDLock *md);
-NSPR_API(PRBool) _MD_test_and_lock(struct _MDLock *md);
+NSPR_API(PRIntn) _MD_test_and_lock(struct _MDLock *md);
 NSPR_API(void) _MD_unlock(struct _MDLock *md);
 NSPR_API(void) _MD_ioq_lock(void);
 NSPR_API(void) _MD_ioq_unlock(void);
